--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             });
         });
     </script> -->
-
+    
     <!-- Bootstrap core JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
@@ -40,7 +40,10 @@
 
     <div id='left' style='text-align: left;'>
         <div style='display: inline-block; vertical-align: top;'>
-            <p id='nameID'>Current selected object: </p>
+            <p id='text'>Current selected object: </p>
+        </div>
+        <div style='display: inline-block; vertical-align: top;'>
+            <p id='nameID'>test</p>
         </div>
     </div> 
 
