--- a/index.html
+++ b/index.html
@@ -8,29 +8,21 @@
         <meta name="author" content="" />
         <title>Model Selector</title>
         <link rel="stylesheet" href="css/cardstyles.css">
+        <!-- <script data-main="scripts/index" src = "scripts/require.js"></script> -->
     </head>
 
     <body>
 
-        <script src="./scripts/index.js" defer></script>
+        <script type="module" src="./scripts/index.js" defer></script>
 
-        <input type="button" class="btn" id="model1" value="Model" onclick="location.href='modelViewer.html'"/>
-
-        
-         
-        <!-- <div class="column">
-            <div class="card" id="cardSelection">
-                <img src="img_avatar.png" alt="avatar" style="width:100%">
-                <div class="container">
-                    <h4><b>Name2</b></h4>
-                    <p>Description2</p>
-                </div>
-            </div>
-        </div> -->
+        <!-- <input type="button" class="btn" id="model1" value="Model" onclick="location.href='modelViewer.html'"/> -->
+        <div style="text-align: center;">
+            <h1>Models</h1>
+        </div>
 
         <div class="something">
             <ul id="cards" style="list-style: none;">
-                <li class="row">
+                <!-- <li class="row">
                     <div class="column">
                         <div class="card" id="cardSelection">
                             <img src="img_avatar.png" alt="avatar" style="width:100%">
@@ -41,126 +33,18 @@
                         </div>
                     </div>
                 </li>
-                <!-- <div class="column">
-                    <div class="card" id="cardSelection">
-                        <img src="img_avatar.png" alt="avatar" style="width:100%">
-                        <div class="container">
-                            <h4><b>Name3</b></h4>
-                            <p>Description3</p>
+                <li class="row">
+                    <div class="column">
+                        <div class="card" id="cardSelection">
+                            <img src="img_avatar.png" alt="avatar" style="width:100%">
+                            <div class="container">
+                                <h4><b>Name3</b></h4>
+                                <p>Description3</p>
+                            </div>
                         </div>
                     </div>
-                </div> -->
+                </li> -->
             </ul>
-            <!--
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail -
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name1</b></h4>
-                        <p>Description1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name2</b></h4>
-                        <p>Description2</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name1</b></h4>
-                        <p>Description1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name2</b></h4>
-                        <p>Description2</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name1</b></h4>
-                        <p>Description1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name2</b></h4>
-                        <p>Description2</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name1</b></h4>
-                        <p>Description1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name2</b></h4>
-                        <p>Description2</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name1</b></h4>
-                        <p>Description1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="card" id="cardSelection">
-                    !-- we can put an image src in place here as a thumbnail --
-                    !-- <img src="img_avatar.png" alt="avatar" style="width:100%"> --
-                    <div class="container">
-                        <h4><b>Name2</b></h4>
-                        <p>Description2</p>
-                    </div>
-                </div>
-            </div> -->
         </div>
 
     </body>
