--- a/modelViewer.html
+++ b/modelViewer.html
@@ -19,6 +19,16 @@
     <link href="./css/styles.css" rel="stylesheet" />
     <!-- <script type="module" src="./node_modules/three/src/Three.js"></script> -->
 
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
+    <script type="importmap">
+    {
+        "imports": {
+        "three": "https://unpkg.com/three@<version>/build/three.module.js"
+        }
+    }
+    </script>
+
 </head>
 
 <body >
