--- a/modelViewer.html
+++ b/modelViewer.html
@@ -7,17 +7,20 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Model Viewer</title>
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
+
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="./css/styles.css" rel="stylesheet" />
-    <!-- <script type="module" src="./node_modules/three/src/Three.js"></script> -->
 
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
@@ -57,6 +60,20 @@
 
             <div style='display: inline-block; vertical-align: top'>
                 <button class="openbtn" id="backBtn">&#8592; Back</button>
+            </div>
+        </div>
+        <div id="wrapper" style="text-align: right">
+
+            <div style='display: inline-block; vertical-align: top'>
+                <!-- GUI helper for changing color of light -->
+                <p id="indicator">Change lighting on model &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;</p>
+                <script src="https://r105.threejsfundamentals.org/threejs/../3rdparty/dat.gui.min.js"></script>
+            </div>
+
+            <div style='display: inline-block; vertical-align: top'>
+                <!-- GUI helper for changing background color-->
+                <p id="indicator">Change background color</p>
+                <script src="https://cdn.jsdelivr.net/npm/three@0.129/examples/js/libs/dat.gui.min.js"></script>
             </div>
         </div>
     </div>
