--- a/modelViewer.html
+++ b/modelViewer.html
@@ -33,6 +33,7 @@
     <div id="main">
         <div id="sideboi" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" id="closeBtn">&times;</a>
+            <h3 style="color: white; padding: 8px 8px 8px 16px;">Click to rename an object!</h3>
             <ul id="elements"></ul>
         </div>
         
@@ -40,7 +41,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        
+
         <script type="module" src="./scripts/modelViewer.js"></script>
 
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> 
